--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,11 +6,7 @@
         "type": "cppdbg",
         "request": "launch",
         "program": "${workspaceFolder}/a.out",
-        "args": [
-          "--leak-check=full",
-          "--track-origins=yes",
-          "--show-leak-kinds=all",
-          "${workspaceFolder}/a.out"
+        "args": ["map.cub"
         ],
         "stopAtEntry": false,
         "cwd": "${workspaceFolder}",
