fix the code there is a prob in parsing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,9 @@
         "ray_casting.h": "c",
         "limits": "c",
         "type_traits": "c",
-        "utility": "c"
+        "utility": "c",
+        "map.h": "c",
+        "render.h": "c",
+        "math.h": "c"
     }
 }
