--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,11 +7,8 @@
         "request": "launch",
         "program": "${workspaceFolder}/a.out",
         "args": [
-          // "--leak-check=full",
-          // "--track-origins=yes",
-          // "--show-leak-kinds=all",
-          // "${workspaceFolder}/a.out"
-          "Mandatory/map.cub"
+          
+          "map_bonus.cub"
         ],
         "stopAtEntry": false,
         "cwd": "${workspaceFolder}",
